# usdbee

./: .gitignore  .prettierrc  .release-it.json  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: pr.yml  publish.yml
assets/: .gitignore
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fetcher.rs  lib.rs  main.rs  models.rs  omniverse.rs  parser.rs
src/lib/components/: DependenciesTab.svelte  ErrorModal.svelte  ExportModal.svelte  RenderingTab.svelte  SceneTab.svelte  SettingsTab.svelte
src/lib/state/: controlsState.svelte.ts  viewerSettings.svelte.ts
src/lib/three/: RendererKit.svelte.ts  VideoExporter.ts  usdUtils.ts
src/lib/utils/: format.ts
src/routes/: +page.svelte  page.css
